--- a/spy-options-intelligence/config/settings.yaml
+++ b/spy-options-intelligence/config/settings.yaml
@@ -22,6 +22,13 @@ monitoring:
     metrics_dump_interval_minutes: 15     # How often to write metrics JSON
     latency_window_size: 100              # Rolling window for p50/p95/p99
 
+logging:
+  console_level: "INFO"
+  file_level: "DEBUG"
+  retention_days: 30
+  execution_log_path: "data/logs/execution"
+  error_log_path: "data/logs/errors"
+
 historical:
   backfill:
     trading_days: 30
