Add Polygon SPY client for historical minute-level data
Implemented PolygonSPYClient with date-by-date fetching via
RESTClient.get_aggs(), retry logic, rate limiting, and record
validation. Updated timespan from second to minute for free-tier
compatibility. Added 14 mocked unit tests and 7 live integration
tests (929 bars validated against Polygon API). 84/84 tests pass.

--- a/spy-options-intelligence/config/sources.yaml
+++ b/spy-options-intelligence/config/sources.yaml
@@ -16,7 +16,7 @@ polygon:
   spy:
     ticker: "SPY"
     multiplier: 1
-    timespan: "second"
+    timespan: "minute"          # "minute" for free tier, "second" with paid plan
     limit_per_request: 50000
 
   options:
@@ -29,7 +29,7 @@ polygon:
     ticker: "I:VIX"
     market: "indices"
     multiplier: 1
-    timespan: "second"
+    timespan: "minute"          # "minute" for free tier, "second" with paid plan
     limit_per_request: 50000
 
   news:
