Add multi-ticker parallel execution with process management
Generalize the pipeline from SPY-only to any equity ticker:
- Rename PolygonSPYClient → PolygonEquityClient with ticker param
  and backward-compat alias
- Add "equity" validator schema with for_equity() factory
- Ticker-scoped checkpoints and per-session monitoring labels
- ParallelRunner spawns one subprocess per ticker with rate-limit
  budget division and JSON process registry
- ProcessManager for listing/stopping workers by ticker
- HealthDashboard aggregates per-session metrics into unified view
- CLI: --ticker, --rate-limit, backfill-all, workers list/stop, health
- 321 tests passing (58 new across 7 test files)

--- a/spy-options-intelligence/config/settings.yaml
+++ b/spy-options-intelligence/config/settings.yaml
@@ -29,6 +29,10 @@ logging:
   execution_log_path: "data/logs/execution"
   error_log_path: "data/logs/errors"
 
+orchestrator:
+  tickers: ["SPY"]
+  max_workers: 1
+
 historical:
   backfill:
     trading_days: 30
