Add data consolidation with Greeks, indicators, and sentiment
Implemented Consolidator that merges SPY, VIX, options, and news
into enriched daily Parquet files. Computes Black-Scholes Greeks
(delta, gamma, theta, vega, rho, IV) via py_vollib, technical
indicators (RSI, MACD, Bollinger Bands) via ta library, momentum
features, and attaches news sentiment. Graceful degradation when
optional sources are missing. Added CLI consolidate command and
22 tests (21 unit + 1 integration). 437 tests passing.

--- a/spy-options-intelligence/config/settings.yaml
+++ b/spy-options-intelligence/config/settings.yaml
@@ -41,6 +41,29 @@ historical:
     # start_date: "2025-01-01"
     # end_date: "2025-01-31"
 
+consolidation:
+  risk_free_rate: 0.045
+  dividend_yield: 0.015
+  indicators:
+    rsi:
+      period: 14
+    macd:
+      fast: 12
+      slow: 26
+      signal: 9
+    bollinger:
+      period: 20
+      std_dev: 2.0
+  momentum:
+    windows: [5, 30, 60]
+  greeks:
+    min_time_to_expiry_days: 0.01
+    min_iv: 0.01
+    max_iv: 5.0
+    fallback_iv: 0.20
+  news:
+    max_lookback_hours: 24
+
 signal_validation:
   prediction_window_minutes: 120
   padding_strategy: "last_price"
