Add schema drift detection with baseline persistence and CLI
Implemented SchemaMonitor that extracts Parquet schemas via
pyarrow metadata (no data loading), stores baselines as JSON,
and detects new/missing columns and type changes. Added
schema-check and schema-baseline CLI commands, configurable
alert toggles in settings.yaml, and 20 unit tests.

--- a/spy-options-intelligence/config/settings.yaml
+++ b/spy-options-intelligence/config/settings.yaml
@@ -12,6 +12,12 @@ streaming:
     alert_threshold_seconds: 900      # 15 minutes
 
 monitoring:
+  schema:
+    alert_on_new_columns: true
+    alert_on_missing_columns: true
+    alert_on_type_changes: true
+    auto_update_baseline: false
+
   performance:
     commit_latency_seconds: 300           # Alert if batch write exceeds 5 min
     throughput_min_records_per_sec: 100    # Alert if throughput drops below
