Add feed simulator for replaying historical data as real-time
Implemented FeedSimulator that reads historical Parquet files
and yields records with configurable inter-record delays to
mimic live data. Supports all sources (spy, vix, options, news,
consolidated), BaseSource-compatible DI into StreamingRunner,
stop_event for graceful interruption, and 5s delay cap.
Added simulate CLI command and 24 unit tests.

--- a/spy-options-intelligence/config/settings.yaml
+++ b/spy-options-intelligence/config/settings.yaml
@@ -70,6 +70,10 @@ consolidation:
   news:
     max_lookback_hours: 24
 
+simulator:
+  speed_multiplier: 1.0       # 1.0 = real-time, 10.0 = 10x, 0 = no delay
+  max_delay_per_gap_sec: 5.0  # Cap per-record delay to avoid hanging
+
 signal_validation:
   prediction_window_minutes: 120
   padding_strategy: "last_price"
