Add feature engineering and analysis rebuild (Step 23)
New modules:
- MinuteDownloader: SPY + VIX bulk minute bar download via Polygon REST
- TargetedOptionsDownloader: 2 calls + 2 puts per day selection + minute download;
  error-resilient run() wraps discover_targeted() and download_minute() in try/except
  so 429s and other API errors skip the date instead of crashing
- FeatureEngineer: lagged % change features (1/5/10/15 min) + IV for options
- OptionsScanner: 20%+ intraday move detector with rolling 120-min reference window
- SpaceReporter: storage size tree + compression estimates
- HardwareMonitor: CPU/memory/disk tracking via psutil with @track_hardware decorator
- Streamlit dashboard (3-tab: options movement, space, hardware)

New CLI commands: download-minute, download-options-targeted, engineer-features,
scan-options, report-space, report-hardware, dashboard

Config: config/pipeline_v2.yaml

Tests: 70 new unit tests (634 total, 7 skipped)

--- a/spy-options-intelligence/requirements.txt
+++ b/spy-options-intelligence/requirements.txt
@@ -60,3 +60,4 @@ scipy>=1.11.0                  # Numerical methods (required by py_vollib)
 python-dateutil>=2.8.2
 pytz>=2023.3
 psutil>=5.9.0                  # Process monitoring
+streamlit>=1.30.0              # Interactive dashboard UI
