Fix options strike selection to use exact computed strikes
Replace wide ±5% discovery_range_pct query with mathematically
computed exact strikes based on strike_increment (default $0.50):
- Calls: n lowest strikes strictly above opening (e.g. 600.5, 601.0)
- Puts:  n highest strikes at or below opening  (e.g. 600.0, 599.5)

Polygon query now uses a tight range covering only target strikes
instead of a ±5% band. Add _compute_strikes() helper with edge-case
handling for when opening falls exactly on a strike boundary.

Add TestComputeStrikes with 6 tests covering fractional opening,
exact boundary, strict above/below invariants, and user example.
Replace discovery_range_pct with strike_increment in config.

--- a/spy-options-intelligence/config/pipeline_v2.yaml
+++ b/spy-options-intelligence/config/pipeline_v2.yaml
@@ -13,8 +13,8 @@ pipeline_v2:
 
   options:
     n_calls: 2                     # calls with strike immediately > opening
-    n_puts: 2                      # puts with strike immediately < opening
-    discovery_range_pct: 0.05      # ±5% range to query Polygon, then filter to n_calls/n_puts
+    n_puts: 2                      # puts with strike immediately <= opening
+    strike_increment: 0.5          # SPY options strike price increment in dollars
     expiration_search_days: 5      # look for expiry within next 5 calendar days
 
   scanner:
