Add Massive.com options download pipeline with CLI entry point
Three new modules with clean separation of concerns:
- OptionsTickerBuilder: pure math, builds O:SPY... tickers from strike/expiry params
- ContractSelector: TEST mode (interactive, prompts once per cycle) and PROD mode
  (calls list_options_contracts(), filters nearest n_calls/n_puts strikes)
- MassiveOptionsDownloader: generic parallel bar fetcher via massive.list_aggs(),
  zero ticker-construction logic, ThreadPoolExecutor with resume support

Config: pipeline_v2.yaml gains contract_selector and massive_options sections;
sources.yaml gains massive.api_key entry; requirements.txt adds massive>=2.2.0.

CLI: new download-massive-options command with --start-date, --end-date,
--mode (test|prod override), --resume/--no-resume flags.

116 new unit tests, all passing.

--- a/spy-options-intelligence/config/pipeline_v2.yaml
+++ b/spy-options-intelligence/config/pipeline_v2.yaml
@@ -17,6 +17,25 @@ pipeline_v2:
     strike_increment: 0.5          # SPY options strike price increment in dollars
     expiration_search_days: 5      # look for expiry within next 5 calendar days
 
+  # MassiveOptionsDownloader — ticker construction approach (no list_options_contracts)
+  # Use when Polygon contract discovery returns empty (free tier) or for Massive.com client
+  massive_options:
+    limit_per_request: 500         # bars per list_aggs call (390 bars/day max for minute)
+    max_workers: 4                 # parallel download threads (one per contract)
+
+  # ContractSelector — handshake between contract discovery and bar download
+  # mode: "test" uses interactive prompting once per cycle (free tier)
+  #        "prod" calls Massive list_options_contracts() and filters (paid tier)
+  contract_selector:
+    mode: "test"
+    prod:
+      underlying: "SPY"
+      n_calls: 2
+      n_puts: 2
+      strike_increment: 0.5          # SPY $0.50 increments on paid tier
+      expiry_convention: "next_trading_day"   # next_calendar_day | next_trading_day | next_friday | fixed
+      expiration_search_days: 5      # retry up to 5 expiry offsets in PROD if API returns empty
+
   scanner:
     reference_window_minutes: 120  # rolling lookback to find reference price
     trigger_threshold_pct: 20.0    # 20%+ move triggers an event
