--- a/spy-options-intelligence/requirements.txt
+++ b/spy-options-intelligence/requirements.txt
@@ -9,6 +9,7 @@ fastparquet>=2023.4.0
 
 # API Clients
 polygon-api-client>=1.12.0    # Polygon.io SDK
+massive>=2.2.0                 # Massive.com SDK (list_aggs for options minute bars)
 requests>=2.31.0
 urllib3>=2.0.0
 websocket-client>=1.6.0        # WebSocket support
