Fix Massive 429 handling: proactive rate limiter + robust status detection
Three root causes fixed:

1. Silent 429 swallowing: Massive raises requests.HTTPError where the
   status lives at exc.response.status_code, not exc.status_code.
   Old code returned 0 and fell through to return [] — treating every
   rate-limit hit as "no data". Added _extract_status_code() that tries
   direct attrs, response object, and string matching ("429", "rate
   limit", "too many requests") before returning 0.

2. No proactive rate limiter: retry_policy.yaml had rate_limit_wait_seconds
   but the retry handler never read it — only retroactive backoff after a
   429. Added class-level _throttle() with threading.Lock + timestamp that
   enforces a 15s minimum gap (4 safe calls/min) BEFORE each API call.

3. max_workers=4 fired parallel calls that instantly blew the 5/min
   budget. Default changed to max_workers=1.

Also:
- Added 'massive' retry profile in retry_policy.yaml (7 attempts,
  15s initial wait, 120s max — safety net for burst 429s).
- Changed _fetch_bars to use source="massive" retry profile.
- 12 new tests: TestExtractStatusCode (7), TestThrottle (2),
  TestFetchBars429 (2), TestDefaultMaxWorkers (1).
- autouse fixture resets _last_api_call between tests to prevent
  15s sleeps from leaking across test cases.
- Full suite: 786 passing, 7 skipped.

--- a/spy-options-intelligence/config/retry_policy.yaml
+++ b/spy-options-intelligence/config/retry_policy.yaml
@@ -17,3 +17,12 @@ retry:
     jitter: true
     rate_limit_wait_seconds: 12  # 5 req/min = 12s between requests
     retry_on_status_codes: [500, 502, 503, 504, 429]
+
+  massive:
+    max_attempts: 7
+    initial_wait_seconds: 15.0  # 60s / 4 safe calls = 15s minimum between retries
+    max_wait_seconds: 120.0
+    exponential_base: 2
+    jitter: true
+    rate_limit_wait_seconds: 15  # enforced proactively in MassiveOptionsDownloader
+    retry_on_status_codes: [500, 502, 503, 504, 429]
