Add ML pipeline: feature engineering through CLI runner (Steps 29–38)
New modules:
- src/processing/ml_feature_engineer.py — 66 engineered features, binary target labels
- src/processing/label_generator.py — forward-looking 20%/120min target generator
- src/ml/__init__.py — ML sub-package
- src/ml/data_balancer.py — undersample majority / class-weight balancing
- src/ml/data_splitter.py — chronological train/val/test split (date-level)
- src/ml/train_xgboost.py — XGBoost training pipeline with early stopping
- src/ml/feature_importance.py — importance extraction + ASCII bar chart
- src/ml/backtest.py — test-set backtester with lift metric
- src/ml/cli.py — ml Click subgroup (generate-features, train, feature-importance, backtest)
- config/ml_settings.yaml — unified ML config for all modules

Updated:
- src/cli.py — register ml subgroup
- requirements.txt — add xgboost>=2.0.0, scikit-learn>=1.3.0, joblib>=1.3.0
- IMPLEMENTATION_PLAN.md — Steps 29–38 documented

Tests: 1088 passing, 7 skipped (209 new ML tests across 8 test files)

--- a/spy-options-intelligence/requirements.txt
+++ b/spy-options-intelligence/requirements.txt
@@ -57,6 +57,11 @@ py_vollib>=1.0.3               # Black-Scholes Greeks and implied volatility
 ta>=0.11.0                     # Technical indicators (RSI, MACD, Bollinger)
 scipy>=1.11.0                  # Numerical methods (required by py_vollib)
 
+# ML Training
+xgboost>=2.0.0                 # Gradient boosting classifier (installed: 3.2.0)
+scikit-learn>=1.3.0            # Metrics: precision, recall, f1, roc_auc (installed: 1.8.0)
+joblib>=1.3.0                  # Model artifact serialisation (installed: 1.5.3)
+
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
