Add high-precision threshold, speed benchmark, and error analysis (Steps 39-40)
Step 39 - High-precision threshold & speed benchmarking:
- Add min_loss_120m to ml_feature_engineer._compute_targets (worst drawdown
  in 120-min forward window; added to _NON_FEATURE_COLS to prevent leakage)
- Add min_loss_120m to backtest._TRADE_META_COLS (included in trades CSV)
- Create src/ml/evaluate.py: find_optimal_threshold_for_precision() sweeps
  thresholds 0.50-0.99 on validation set to meet minimum precision target
- Create src/ml/benchmark.py: benchmark_prediction_speed() times single-sample
  predict_proba with warmup; p99=0.40ms (247x under 100ms requirement)
- Add find-threshold, benchmark-speed CLI commands; --threshold override to
  backtest command for high-precision signal filtering
- Add evaluation and performance sections to config/ml_settings.yaml
- Fix ConfigLoader to auto-discover all *.yaml files (was missing ml_settings.yaml)
- Fix XGBoostTrainer class_weights mode: pass sample_weight to model.fit()
- 38 new tests (21 evaluate + 17 benchmark); full suite: 1126 passing

Step 40 - False positive severity analysis:
- Create src/ml/error_analyzer.py: PredictionErrorAnalyzer class with
  load_false_positives, generate_risk_report, stop_loss_impact, plot_ascii,
  and calculate_expected_value methods
- Add analyze-errors CLI command: reads backtest trades CSV, prints ASCII
  histogram, loss bucket breakdown, stop-loss trigger table, recommendations,
  and expected value analysis
- 45 new tests; full suite: 1171 passing

Real results (xgboost_v2, threshold=0.67, test split 2025-12-23 to 2026-02-19):
- Backtest: 307 signals, 282 TP, 25 FP, precision=91.9%, lift=2.94x
- False positive analysis: median drawdown=-23.8%, worst=-69.1%
- Expected value per trade: +16.74% (breakeven win rate: 50%)

--- a/spy-options-intelligence/config/ml_settings.yaml
+++ b/spy-options-intelligence/config/ml_settings.yaml
@@ -99,6 +99,23 @@ ml_training:
     # Where CSV importance reports are written
     output_dir: "data/reports/feature_importance"
 
+  # --- Evaluation & threshold optimisation ---
+  evaluation:
+    # Primary focus metric for signal filtering
+    primary_metric: "precision"
+
+    # Minimum precision required for a threshold to be considered valid
+    min_precision_required: 0.90
+
+    # Default prediction threshold used when no --threshold flag is supplied.
+    # Set to 0.50 for balanced precision/recall; increase for high-precision trading.
+    prediction_threshold: 0.50
+
+  # --- Speed requirement ---
+  performance:
+    # Hard real-time requirement: p99 prediction latency must be below this value
+    max_prediction_latency_ms: 100
+
   # --- Backtesting ---
   backtest:
     # Where trades CSV and JSON metrics reports are written
