--- a/spy-options-intelligence/requirements.txt
+++ b/spy-options-intelligence/requirements.txt
@@ -61,6 +61,7 @@ scipy>=1.11.0                  # Numerical methods (required by py_vollib)
 xgboost>=2.0.0                 # Gradient boosting classifier (installed: 3.2.0)
 scikit-learn>=1.3.0            # Metrics: precision, recall, f1, roc_auc (installed: 1.8.0)
 joblib>=1.3.0                  # Model artifact serialisation (installed: 1.5.3)
+shap>=0.50.0                   # SHAP values for XGBoost signal explainability
 
 # Utilities
 python-dateutil>=2.8.2
