--- a/spy-options-intelligence/requirements.txt
+++ b/spy-options-intelligence/requirements.txt
@@ -63,6 +63,12 @@ scikit-learn>=1.3.0            # Metrics: precision, recall, f1, roc_auc (instal
 joblib>=1.3.0                  # Model artifact serialisation (installed: 1.5.3)
 shap>=0.50.0                   # SHAP values for XGBoost signal explainability
 
+# ML Model Comparison & Optimization (Steps 45-49)
+optuna>=3.0.0                  # Bayesian hyperparameter optimization (HyperparameterOptimizer)
+lightgbm>=4.0.0                # LightGBM gradient boosting (alternative to XGBoost)
+plotly>=5.18.0                 # Interactive charts for ML dashboard (src/ml/dashboard.py)
+torch>=2.0.0                   # PyTorch for LSTM model (src/ml/lstm_model.py); optional
+
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
